[gd_scene load_steps=12 format=3 uid="uid://ssl2sb46eads"]

[ext_resource type="Script" path="res://scripts/gui/options menu/options.gd" id="1_5nxxk"]
[ext_resource type="Script" path="res://scripts/gui/options menu/Mode Select.gd" id="2_ov1rq"]
[ext_resource type="Script" path="res://scripts/gui/options menu/Resolution Select.gd" id="3_k0l45"]
[ext_resource type="Script" path="res://scripts/gui/options menu/VSync Button.gd" id="4_uhbv0"]
[ext_resource type="Script" path="res://scripts/gui/options menu/Master Slider.gd" id="5_1gsg4"]
[ext_resource type="Script" path="res://scripts/gui/options menu/Music Slider.gd" id="6_2mq5t"]
[ext_resource type="Script" path="res://scripts/gui/options menu/Ambience Slider.gd" id="7_j8aar"]
[ext_resource type="Script" path="res://scripts/gui/options menu/SFX Slider.gd" id="8_cnv66"]
[ext_resource type="Script" path="res://scripts/gui/options menu/Difficulty Slider.gd" id="9_8iswk"]
[ext_resource type="Script" path="res://scripts/gui/options menu/Input Setting.gd" id="10_giuu8"]
[ext_resource type="Script" path="res://scripts/gui/options menu/InvertAxis.gd" id="11_h1csf"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_5nxxk")

[node name="Apply Window" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -439.5
offset_top = -257.0
offset_right = 439.5
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Apply Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Apply Window/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Apply Window/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings Changed, apply?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Apply Window/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Apply Window/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="ApplyNo" type="Button" parent="Apply Window/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "No
"

[node name="MarginContainer2" type="MarginContainer" parent="Apply Window/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="ApplyYes" type="Button" parent="Apply Window/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -479.5
offset_top = -370.0
offset_right = 479.5
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 80
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_mode = 2

[node name="Video" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Video"]
layout_mode = 2
follow_focus = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Settings" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Display Mode" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "Display Mode
"

[node name="Mode Select" type="OptionButton" parent="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer/MarginContainer/Settings"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10
focus_neighbor_top = NodePath("../../../../..")
focus_previous = NodePath("../../../../..")
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Borderless Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Fullscreen"
popup/item_2/id = 2
script = ExtResource("2_ov1rq")

[node name="Resolution" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "Resolution
"

[node name="Resolution Select" type="OptionButton" parent="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer/MarginContainer/Settings"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10
item_count = 4
popup/item_0/text = "1280x720"
popup/item_0/id = 0
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "2560x1440"
popup/item_2/id = 2
popup/item_3/text = "3840x2160"
popup/item_3/id = 3
script = ExtResource("3_k0l45")

[node name="VSync" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "VSync
"

[node name="VSync Button" type="CheckButton" parent="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_neighbor_bottom = NodePath("../../../../../../Back")
script = ExtResource("4_uhbv0")

[node name="Audio" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
follow_focus = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Settings" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Master" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Master"

[node name="Master Slider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
focus_neighbor_top = NodePath("../../../../..")
focus_neighbor_bottom = NodePath("../Music Slider")
value = 100.0
rounded = true
script = ExtResource("5_1gsg4")

[node name="Music" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "Music"

[node name="Music Slider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Master Slider")
focus_neighbor_bottom = NodePath("../Ambience Slider")
value = 100.0
script = ExtResource("6_2mq5t")

[node name="Ambience" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "Ambience"

[node name="Ambience Slider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
focus_neighbor_top = NodePath("../Music Slider")
focus_neighbor_bottom = NodePath("../SFX Slider")
value = 100.0
script = ExtResource("7_j8aar")

[node name="Sound Effects" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "Sound Effects"

[node name="SFX Slider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
focus_neighbor_top = NodePath("../Ambience Slider")
focus_neighbor_bottom = NodePath("../../../../../../Back")
value = 100.0
script = ExtResource("8_cnv66")

[node name="Gameplay" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2
follow_focus = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Gameplay/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Settings" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Gameplay/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Difficulty" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Gameplay/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Difficulty"

[node name="Difficulty Slider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Gameplay/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../../../..")
focus_neighbor_bottom = NodePath("../../../../../../Back")
min_value = 1.0
max_value = 3.0
value = 2.0
rounded = true
script = ExtResource("9_8iswk")

[node name="Keybinds" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_mode = 2

[node name="Keyboard" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Settings" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Forward" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Forward"

[node name="Keyboard Forward" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
focus_neighbor_top = NodePath("../../../../..")
focus_neighbor_bottom = NodePath("../Keyboard Backward")
action_mode = 0
script = ExtResource("10_giuu8")

[node name="Backward" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Backward"

[node name="Keyboard Backward" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Keyboard Forward")
focus_neighbor_bottom = NodePath("../Keyboard Left")
action_mode = 0
script = ExtResource("10_giuu8")

[node name="Left" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Left"

[node name="Keyboard Left" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Keyboard Backward")
focus_neighbor_bottom = NodePath("../Keyboard Right")
action_mode = 0
script = ExtResource("10_giuu8")

[node name="Right" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Right"

[node name="Keyboard Right" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Keyboard Left")
focus_neighbor_bottom = NodePath("../Keyboard Jump")
action_mode = 0
script = ExtResource("10_giuu8")

[node name="Jump" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Jump
"

[node name="Keyboard Jump" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Keyboard Right")
focus_neighbor_bottom = NodePath("../Keyboard Throw")
action_mode = 0
script = ExtResource("10_giuu8")

[node name="Throw" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Throw"

[node name="Keyboard Throw" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Keyboard Jump")
focus_neighbor_bottom = NodePath("../Keyboard Dive")
action_mode = 0
script = ExtResource("10_giuu8")

[node name="Dive" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dive"

[node name="Keyboard Dive" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Keyboard Throw")
focus_neighbor_bottom = NodePath("../../../../../../../../Back")
action_mode = 0
script = ExtResource("10_giuu8")

[node name="Place Spawn" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Place Spawn"

[node name="Keyboard Place Spawn" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Keyboard Throw")
focus_neighbor_bottom = NodePath("../../../../../../../../Back")
action_mode = 0
script = ExtResource("10_giuu8")

[node name="Respawn" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Respawn"

[node name="Keyboard Respawn" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Keyboard Throw")
focus_neighbor_bottom = NodePath("../../../../../../../../Back")
action_mode = 0
script = ExtResource("10_giuu8")

[node name="Camera Mode" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Camera Mode"

[node name="Keyboard Camera Mode" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Keyboard/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath("../../../../../../../../Back")
script = ExtResource("10_giuu8")

[node name="Controller" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Settings" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="SouthPaw Mode" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "SouthPaw Mode"

[node name="SouthPawMode" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 8
script = ExtResource("11_h1csf")

[node name="LeftStickInvertX1" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "Invert Left Stick X Axis"

[node name="LeftStickInvertX" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 8
script = ExtResource("11_h1csf")

[node name="LeftStickInvertY1" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "Invert Left Stick Y Axis"

[node name="LeftStickInvertY" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 8
script = ExtResource("11_h1csf")

[node name="RightStickInvertX1" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "Invert Right Stick X Axis"

[node name="RightStickInvertX" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 8
script = ExtResource("11_h1csf")

[node name="RightStickInvertY1" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
text = "Invert Right Stick Y Axis"

[node name="RightStickInvertY" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 8
script = ExtResource("11_h1csf")

[node name="Jump" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Jump
"

[node name="Controller Jump" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("10_giuu8")

[node name="Throw" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Throw"

[node name="Controller Throw" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("10_giuu8")

[node name="Dive" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Forward
"

[node name="Controller Dive" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath("../../../../../../../../Back")
script = ExtResource("10_giuu8")

[node name="Place Spawn" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Place Spawn"

[node name="Controller Place Spawn" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("10_giuu8")

[node name="Respawn" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Respawn"

[node name="Controller Respawn" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath("../../../../../../../../Back")
script = ExtResource("10_giuu8")

[node name="Camera Mode" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Camera Mode"

[node name="Controller Camera Mode" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Keybinds/TabContainer/Controller/ScrollContainer/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath("../../../../../../../../Back")
script = ExtResource("10_giuu8")

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_neighbor_top = NodePath("../TabContainer")
text = "Back
"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 2
offset_left = 1.0
offset_right = 960.0
offset_bottom = 1080.0
size_flags_vertical = 3

[connection signal="pressed" from="Apply Window/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/ApplyNo" to="." method="_on_apply_no_pressed"]
[connection signal="pressed" from="Apply Window/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2/ApplyYes" to="." method="_on_apply_yes_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer/MarginContainer/Settings/Mode Select" to="." method="_on_mode_select_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer/MarginContainer/Settings/Resolution Select" to="." method="_on_resolution_select_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/TabContainer/Video/ScrollContainer/MarginContainer/Settings/VSync Button" to="." method="_on_v_sync_button_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings/Master Slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings/Music Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings/Ambience Slider" to="." method="_on_ambience_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TabContainer/Audio/ScrollContainer/MarginContainer/Settings/SFX Slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
